src/objects/Service_Usage_Outcome__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Identified__c</fullName>
        <label>Date Identified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Outcome_Met__c</fullName>
        <label>Date Outcome Met</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outcome_Category__c</fullName>
        <description>Outcome Category</description>
        <label>Outcome Category</label>
        <picklist>
            <picklistValues>
                <fullName>Friends, family and relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safe and well</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental wellbeing (non IAM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent living (non IAM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choice and control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge and Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hobbies and interests</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Outcome_No__c</fullName>
        <description>This is the outcome number auto generated by the system.</description>
        <inlineHelpText>Auto generated by the system, any value input here will be over written by the system. It is based on the number of Outcomes already created for related Service Usage.</inlineHelpText>
        <label>Outcome No.</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outcome_Status__c</fullName>
        <label>Outcome Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ongoing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No longer required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_Identified_Outcome__c</fullName>
        <label>Person Identified Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Usage__c</fullName>
        <label>Related Service Usage</label>
        <referenceTo>Service_Usage__c</referenceTo>
        <relationshipLabel>Support Plan</relationshipLabel>
        <relationshipName>Service_Usage_Outcomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Usage Outcome</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Service Usage Outcome ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Usage Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>